feat(bash): remove commented lines